# serializer version: 1
# name: test_device_tracker[device_tracker.test_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.test_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'LRW3F7EK4NC700000-location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[device_tracker.test_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Location',
      'gps_accuracy': 0,
      'latitude': -30.222626,
      'longitude': -97.6236871,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker[device_tracker.test_route-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.test_route',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Route',
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'route',
    'unique_id': 'LRW3F7EK4NC700000-route',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[device_tracker.test_route-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Route',
      'gps_accuracy': 0,
      'latitude': 30.2226265,
      'longitude': -97.6236871,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_route',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_tracker_alt[device_tracker.test_location-statealt]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Location',
      'gps_accuracy': 0,
      'latitude': -30.222626,
      'longitude': -97.6236871,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker_alt[device_tracker.test_route-statealt]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Route',
      'gps_accuracy': 0,
      'latitude': 30.2226265,
      'longitude': -97.6236871,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.test_route',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
